metadata/objects/Book_Copy__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_date__c</fullName>
        <label>Available date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Book Copies</relationshipLabel>
        <relationshipName>Book_Copies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Book Copy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Book__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Available_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Available_Copies</fullName>
        <columns>Book__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Available_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Available Copies</label>
    </listViews>
    <listViews>
        <fullName>Pending_Loans</fullName>
        <columns>Book__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Available_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Pending Loans</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Book Copy Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>